--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.core:core-ktx:+'
     def room_version = '2.3.0'
     def activityVersion = '1.3.1'
 
