--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".EmployeeApp"
         android:supportsRtl="true"
         android:theme="@style/Theme.RoomDemo"
         tools:targetApi="31">
